decommissioning of jxbrowser